# wgpu-playground

./: .gitignore  Cargo.toml  build.rs
res/: cube.mtl
src/: camera.rs  main.rs  model.rs  pipeline.rs  render.rs  text_render.rs  texture.rs
src/shaders/: almight.wgsl  almight_diffuse_shadow.frag  almight_diffuse_shadow.vert  almight_diffuse_shadow.wgsl  almight_frag.frag  almight_vertex.vert  color_shadow.frag  color_shadow.vert  color_shadow.wgsl  diffuse_only.wgsl  diffuse_only_frag.frag  diffuse_only_vertex.vert  light.vert  shader.frag  shader.vert  shadow.vert  solid_color.wgsl  solid_frag.frag  solid_vertex.vert  tangent.comp  text.frag  text.vert
