[package]
name = "wgpu-playground"
version = "0.1.0"
authors = ["switefaster <switefaster@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
bytemuck = { version = "1.5.1", features = ["derive"] }
cgmath = "0.18.0"
env_logger = "0.8.3"
futures = "0.3.13"
image = "0.23.14"
log = "0.4.14"
rayon = "1.5.0"
tobj = "3.0.0"
wgpu = "0.8.1"
winit = "0.25.0"
rapier3d = { version = "0.8.0", features = ["parallel", "simd-nightly"] }
tokio = { version = "1.4.0", features = ["macros", "rt", "time"] }
lazy_static = "1.4.0"
wgpu_glyph = "0.12"
specs = "0.16.1"

[profile.release]
lto = true
